--- a/src/server/vercel.json
+++ b/src/server/vercel.json
@@ -2,15 +2,14 @@
     "version": 2,
     "builds": [
      {
-      "src": "api.js",
-      "use": "@vercel/node",
-      "config": { "includeFiles": ["dist/**"] }
+      "src": "./index.js",
+      "use": "@vercel/node"}
      }
     ],
     "routes": [
      {
       "src": "/(.*)",
-      "dest": "api.js"
+      "dest": "/"
      }
     ]
    }
